2002-06-22  Ion Badulescu  <lionut@gonzales.badula.org>

	* buildall: use ksh for configure on aix5.1

	* Makefile.am: added nfs_prot_aix4_3.h to EXTRA_DIST_CONF

	* conf/mount/mount_aix.c (mount_aix3): if the NFSv3 mount fails
	with EINVAL and we have MOUNT_TYPE_NFS3_BIS defined, retry the
	mount with the alternative nfs3_args structure

	* conf/nfs_prot/nfs_prot_aix4_3.h: added alternative nfs3_args
	structure, similar to that in aix5.1, for a hack that tries to
	compensate for IBM's brain fart

	* conf/nfs_prot/nfs_prot_aix5_1.h: new nfs_prot header for aix5.1+

	* aux/macros/check_nfs_prot_headers.m4: added new header for aix5.1+

	* BUGS: update for direct mounts on Linux; document the brokenness
	of /bin/sh on AIX 5.1 and HP-UX 9

	* NEWS: aix5.1 port, aix4.3 workaround

2002-06-22    <ezk@agora.fsl.cs.sunysb.edu>

	* ltmain.sh: use libtool 1.4d, needed support for newer AIX.

2002-06-21  Ion Badulescu  <ion@guppy.limebrokerage.com>

	* aux/macros/check_autofs_style.m4: enable autofs_v2_v3 for
	all solaris2.6+, not just for 2.[6-8]

	* conf/autofs/autofs_default.h: disable autofs if configure
	detects it

2002-06-21  Erez Zadok  <ezk@agora.fsl.cs.sunysb.edu>

	* aux/macros/with_addon.m4: correct M4 quoting.

	* aux/macros/cache_check_dynamic.m4: correct M4 quoting.

	* bootstrap: show version of autotools being used.  Helps
	maintainer debugging.

	* configure.in: new proper syntax for libtool and
	ansi2knr-filtering rules, required by autoconf 1.53 and higher.

2002-06-21  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>

	* aux/GNUmakefile: new search paths for "update" target.

	* config.guess, config.sub, doc/texinfo.tex, ltmain: updates from
	the latest GNU distributions.

2002-06-11  Ion Badulescu  <ion@guppy.limebrokerage.com>

	* amd/amfs_auto.c (amfs_auto_lookup_child): split part of this
	function into the new amfs_auto_lookup_one_child function; return
	null if all ivecs failed to match

2002-05-30  Erez Zadok  <ezk@agora.fsl.cs.sunysb.edu>
