@@ -333,3 +333,7 @@ generic mount option.
 * Trond Myklebust <trond.myklebust@fys.uio.no>
 January 10, 2002: Proper initialization of the timeo parameter on Linux, TCP
 _must_ have a timeout 2 orders of magnitude larger than UDP
+
+* George Ross <gdmr@dcs.ed.ac.uk>
+April 29, 2002: Rework of old code, support for wildcards in LDAP queries,
+and an FD leak fix.
