@@ -53,7 +53,7 @@ AH_BOTTOM([
 dnl
 dnl AC_CONFIG_AUX_DIR(aux)
 AC_PREREQ(2.52)
-AC_REVISION($Revision: 1.32 $)
+AC_REVISION($Revision: 1.33 $)
 AC_COPYRIGHT([Copyright (c) 1997-2002 Erez Zadok])
 dnl find out system type
 AC_MSG_NOTICE(*** SYSTEM TYPES ***)
@@ -287,6 +287,7 @@ AC_CHECK_FUNCS(			\
 	hesiod_reload		\
 	hesiod_to_bind		\
 	ldap_open		\
+	ldap_enable_cache	\
 	memcmp			\
 	memcpy			\
 	memmove			\
