@@ -1,3 +1,15 @@
+2002-06-22  Erez Zadok  <ezk@whitestar.dyn.optonline.net>
+
+	* amd/info_ldap.c (amu_ldap_rebind): don't use ldap_enable_cache()
+	if the system doesn't have it.
+
+	* configure.in: detect existence of ldap_enable_cache function,
+	because it doesn't exist on Solaris 9's latest ldap libraries. 
+
+	* amd/info_ldap.c: LDAP patches from George Ross
+	<gdmr@dcs.ed.ac.uk>.  Rework of old code, support for wildcards in
+	LDAP queries, and an FD leak fix.
+
 2002-06-22  Ion Badulescu  <lionut@gonzales.badula.org>
 
 	* buildall: use ksh for configure on aix5.1
